@@ -4,8 +4,16 @@
 # tex file to process; use null or "" for newest in 'dest_dir'
 tex_file : tex/ChemMove.tex
 
-# destination directory for output formats
+# destination directory for output formats; if null, then the
+# 'dest_dir' will be that of 'tex_file'; if both are null, then
+# 'dest_dir' is the current directory
 dest_dir : output
+
+# if 'text_file' is null, then 'tex_depth' specifies how deep to look
+# into 'dest_dir' for the newest tex file; 0 means only look in
+# 'dest_dir', 1 means include its children, etc.; -1 means to look
+# exhaustively
+tex_depth : -1
 
 # tex preamble file; use null or None for no preamble
 preamble : include/Preamble.tex
